[gd_scene load_steps=7 format=2]

[ext_resource path="res://gameplay/OrganicFarm.gd" type="Script" id=1]
[ext_resource path="res://assets/player/organic-farm.png" type="Texture" id=2]
[ext_resource path="res://gameplay/Harvester.tscn" type="PackedScene" id=3]
[ext_resource path="res://gameplay/PlayerDetector.tscn" type="PackedScene" id=4]
[ext_resource path="res://gameplay/ProgressBar.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 23.4829, 24.6679 )

[node name="OrganicFarm" type="StaticBody2D" groups=[
"player",
]]

input_pickable = false
collision_layer = 8
collision_mask = 392
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
capacity = 50
harvest_rate = 10
conversion_rate = 0.25

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

visible = false
shape = SubResource( 1 )

[node name="Harvester" parent="." index="2" instance=ExtResource( 3 )]

type = "energy"

[node name="PlayerDetector" parent="." index="3" instance=ExtResource( 4 )]

[node name="ProgressBar" parent="." index="4" instance=ExtResource( 5 )]

margin_top = 40.0
margin_bottom = 40.0
size = Vector2( 100, 10 )
capacity = 50
current = 0

[connection signal="harvest" from="Harvester" to="." method="_on_Harvester_harvest"]

[connection signal="player_overlap" from="PlayerDetector" to="." method="_on_PlayerDetector_player_overlap"]


